syntax = "proto3";

package demo;

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message CountRequest {
  string name = 1;
  int32 count = 2;
}

message Greet {
  string name = 1;
}

message ChatMessage {
  string from = 1;
  string message = 2;
  int64 seq = 3;
}

service Greeter {
  // Unary
  rpc SayHello(HelloRequest) returns (HelloReply);

  // Server streaming
  rpc GreetMany(CountRequest) returns (stream HelloReply);

  // Client streaming
  rpc AccumulateGreetings(stream Greet) returns (HelloReply);

  // Bidirectional streaming
  rpc Chat(stream ChatMessage) returns (stream ChatMessage);
}

